--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -6,9 +6,10 @@ html(lang='en')
         script(src='/assets/js/ink.iife.js')
         script(src='/assets/js/game.js')
         link(href='/assets/css/styles.min.css' rel='stylesheet' type='text/css')
+        link(href='/assets/css/animate.min.css' rel='stylesheet' type='text/css')
     body
         #play-area
-            #story-area
+            #story-area.tlt
             ul#choices
         script(type='text/javascript').
             var win = nw.Window.get();
