--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -9,7 +9,7 @@ html(lang='en')
         link(href='/assets/css/animate.min.css' rel='stylesheet' type='text/css')
     body
         #play-area
-            #story-area.tlt
+            #story-area
             ul#choices
         script(type='text/javascript').
             var win = nw.Window.get();
